--- a/Android/BusTicketPassenger/bin/AndroidManifest.xml
+++ b/Android/BusTicketPassenger/bin/AndroidManifest.xml
@@ -7,14 +7,15 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".BusTicketPassenger" >
         <activity
             android:name="pt.feup.busticketpassenger.LoginActivity"
             android:label="@string/app_name" >
@@ -23,6 +24,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="pt.feup.busticketpassenger.BuyActivity"
+            android:label="@string/title_activity_buy" >
+        </activity>
+        <activity
+            android:name="pt.feup.busticketpassenger.ViewTicketsActivity"
+            android:label="@string/title_activity_view_tickets" >
         </activity>
     </application>
 
