--- a/Android/BusTicketPassenger/bin/AndroidManifest.xml
+++ b/Android/BusTicketPassenger/bin/AndroidManifest.xml
@@ -11,11 +11,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="pt.feup.busticketpassenger.BusTicketPassenger"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".BusTicketPassenger" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="pt.feup.busticketpassenger.LoginActivity"
             android:label="@string/app_name" >
@@ -32,6 +32,10 @@
         <activity
             android:name="pt.feup.busticketpassenger.ViewTicketsActivity"
             android:label="@string/title_activity_view_tickets" >
+        </activity>
+        <activity
+            android:name="pt.feup.busticketpassenger.TicketsActivity"
+            android:label="@string/title_activity_tickets" >
         </activity>
     </application>
 
