--- a/Android/BusTicketBus/bin/AndroidManifest.xml
+++ b/Android/BusTicketBus/bin/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".BusTicketBus">
         <activity
-            android:name="pt.feup.busticketbus.MainActivity"
+            android:name="pt.feup.busticketbus.BusActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
