Renamed Quote Fragment/Activity to Quotes.

--- a/Android/StockPortfolio/AndroidManifest.xml
+++ b/Android/StockPortfolio/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="pt.feup.stockportfolio.QuoteActivity"
+            android:name="pt.feup.stockportfolio.QuotesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
