--- a/Android/StockPortfolio/AndroidManifest.xml
+++ b/Android/StockPortfolio/AndroidManifest.xml
@@ -5,19 +5,24 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/stox_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/myTheme" >
         <activity
             android:name="pt.feup.stockportfolio.QuotesActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name="pt.feup.stockportfolio.SplashActivity"
+            android:label="STOX" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
